<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<!--     <FrameLayout -->
<!--     android:id="@+id/layout_content" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="0dip" -->
<!--     android:layout_weight="1.0" -->
<!--     /> -->

    <view
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" 
        class="com.austin.mynihonngo.view.MyViewPager"/>
    
    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        android:paddingTop="2dp" >

        <RadioButton
            android:id="@+id/rb_word_center"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/icon_function"
            android:text="@string/tab_word_center" />

        <RadioButton
            android:id="@+id/rb_grammar_sakura"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/icon_grammar"
            android:text="@string/tab_grammar_sakura" />

        <RadioButton
            android:id="@+id/rb_grammar_biaori"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/icon_grammar"
            android:text="@string/tab_grammar_biaori" 
            />

        <RadioButton
            android:id="@+id/rb_gov_affairs"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/icon_govaffairs"
            android:text="@string/tab_gov_affairs" 
            android:visibility="gone"/>

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/icon_setting"
            android:text="@string/tab_setting" 
            android:visibility="visible"/>
    </RadioGroup>

</LinearLayout>