<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/sakurajp" >

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dip"
        android:text="これからも、一緒に勉強しましょう。"
        android:textSize="22dp"
        android:textStyle="bold"
        android:clickable="true"
        android:textColor="@android:color/holo_red_light"/>

    <RelativeLayout
        android:id="@+id/ll_wenbaoxing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogo"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="60dip" >

        <EditText
            android:id="@+id/loginAccount"
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/et_bg"
            android:drawableLeft="@mipmap/ic_account"
            android:hint="@string/hintEnterUserName"
            android:maxLength="11"
            android:drawablePadding="10dip"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:text="austin"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@mipmap/inputcursor"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/loginPwd"
            android:layout_width="fill_parent"
            android:layout_height="52dip"
            android:layout_below="@id/loginAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:background="@drawable/et_bg"
            android:drawableLeft="@mipmap/ic_pwd"
            android:hint="@string/hintEnterPwd"
            android:inputType="textPassword"
            android:drawablePadding="10dip"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:text="8888"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@mipmap/inputcursor"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="52dip"
        android:layout_below="@id/ll_wenbaoxing"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/sel_click_btn_login"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvForgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_alignLeft="@id/btnLogin"
        android:layout_below="@id/btnLogin"
        android:gravity="center"
        android:text="@string/forgetPwd"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/remindNotOperate"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@id/tvHint"
        android:background="#7fffffff" />

    <CheckBox
        android:id="@+id/cb_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_wenbaoxing"
        android:layout_below="@+id/ll_wenbaoxing"
        android:layout_marginLeft="12dp"
        android:text="@string/hintautologin" 
        android:textColor="@color/black"/>

</RelativeLayout>